# zkm-whatsapp

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.md  TODO.md  convert.py  keysource.py  plugin.yaml  pyproject.toml  state.py
docs/: merge-old-backup.md
docs/meeting-notes/: 2026-06-16-2055-w10-auto-decryption-install-readiness.md  2026-06-25-1536-human-readable-chat-folder-names.md
features/: manual.feature
scripts/: migrate_by_id.sh  wa_decrypt_pilot.py
scripts/systemd/: README.md  zkm-whatsapp-decrypt.path  zkm-whatsapp-decrypt.service  zkm-whatsapp-decrypt.sh
tests/: conftest.py  test_by_id_layout.py  test_call_log.py  test_convert.py  test_footer_manifest.py  test_keysource.py  test_media.py  test_media_root.py  test_name_view.py  test_number_change.py  test_owner_jid.py  test_rewrite_persistence.py
tests/fixtures/: msgstore.db
