[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-whatsapp"
version = "0.2.0"
description = "zkm plugin: convert decrypted WhatsApp msgstore.db to per-chat-day transcript markdown"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tobias Kienzler", email = "zommuter@googlemail.com"}]
keywords = ["knowledge-management", "markdown", "personal-data", "whatsapp", "chat"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "python-frontmatter>=1.1",
    "zkm>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/zommuter/zkm"
Repository = "https://github.com/zommuter/zkm-whatsapp"
Issues = "https://github.com/zommuter/zkm-whatsapp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["convert.py", "state.py", "plugin.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"convert.py" = ["E402"]  # sys.path setup for importlib-loaded plugins must precede imports

[tool.uv.sources]
zkm = { path = "../../", editable = true }
